@@ -1,3 +1,8 @@
+Sun Feb 28 15:11:07 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/open3.rb (Open3#popen3): use Thread.detach instead of
+	  double-fork, so that the exit status can be obtained.
+
 Wed Feb 24 22:39:15 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/resolv.rb: fix [ruby-core:28320] reported by Paul Clegg.
